# mmdp

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  01_check_dataset.py  02_naive_pad_dataloader.py  03_constraint_len_dataloader.py  04_knapsack_dataloader.py  04_naive_knapsack_dataloader.py  05_knapsack_dataloader.py  README.md  demo.py  pyproject.toml
src/mmdp/: __init__.py  advanced_torch_datasets.py  config.py  demo_advanced_torch_datasets.py  processors.py  torch_collators.py  torch_datasets.py  utils.py
