[project]
name = "mmdp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ariG23498", email = "aritra.born2fly@gmail.com" } 
]
requires-python = ">=3.9"
dependencies = [
    "datasets>=3.6.0",
    "isort>=6.0.1",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pre-commit>=4.2.0",
    "ruff>=0.12.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
